# demuxlet

./: AUTHORS  ChangeLog  Error.cpp  Error.h  Makefile.am  NEWS  PhredHelper.cpp  PhredHelper.h  README.md  bcf_chunked_reader.cpp  bcf_chunked_reader.h  bcf_filter_arg.h  bcf_filtered_reader.cpp  bcf_filtered_reader.h  bcf_ordered_reader.cpp  bcf_ordered_reader.h  bcf_variant_key.h  bcftools.h  cmd_cram_demuxlet.cpp  configure.ac  cramore.h  filter.cpp  filter.h  genomeChunk.cpp  genomeChunk.h  genomeLoci.h  genome_interval.h  hts_utils.cpp  hts_utils.h  interval_tree.h  pException.h  params.cpp  params.h  reference_sequence.cpp  reference_sequence.h  sam_filtered_reader.cpp  sam_filtered_reader.h  sc_drop_seq.cpp  sc_drop_seq.h  tsv_reader.cpp  (+3 more)
supplementary.material/doublet_analysis/: doublet_analysis.R
supplementary.material/doublet_simulations/: 16.inds.10000.doublets  16.inds.10000.snps.best  16.inds.100000.doublets  16.inds.100000.snps.best  16.inds.15000.doublets  16.inds.15000.snps.best  16.inds.20000.doublets  16.inds.20000.snps.best  16.inds.25000.doublets  16.inds.25000.snps.best  16.inds.30000.doublets  16.inds.30000.snps.best  16.inds.35000.doublets  16.inds.35000.snps.best  16.inds.40000.doublets  16.inds.40000.snps.best  16.inds.45000.doublets  16.inds.45000.snps.best  16.inds.5000.doublets  16.inds.5000.snps.best  16.inds.50000.doublets  16.inds.50000.snps.best  16.inds.55000.doublets  16.inds.55000.snps.best  16.inds.60000.doublets  16.inds.60000.snps.best  16.inds.65000.doublets  16.inds.65000.snps.best  16.inds.70000.doublets  16.inds.70000.snps.best  16.inds.75000.doublets  16.inds.75000.snps.best  16.inds.80000.doublets  16.inds.80000.snps.best  16.inds.85000.doublets  16.inds.85000.snps.best  16.inds.90000.doublets  16.inds.90000.snps.best  16.inds.95000.doublets  16.inds.95000.snps.best  (+187 more)
supplementary.material/facs_prop/: facs_prop.R
supplementary.material/interferon_comparison/: cd14.dscrnaseq.txt  cd16.mono.dscrnaseq.txt  cd19.dscrnaseq.txt  dc.ifn.txt  mega.dscrnaseq.txt  nk.dscrnaseq.txt
supplementary.material/interferon_variability/: IFNb.6.5.vars.prop.txt  cd4.base.txt  cd4.ifn.txt  unstim.0.vars.prop.txt
supplementary.material/nind_analysis/: 16.inds.100000.snps.best  16.inds.15000.snps.best  16.inds.20000.snps.best  16.inds.30000.snps.best  16.inds.35000.snps.best  16.inds.40000.snps.best  16.inds.45000.snps.best  16.inds.5000.snps.best  16.inds.55000.snps.best  16.inds.75000.snps.best  16.inds.85000.snps.best  2.inds.10000.snps.best  2.inds.15000.snps.best  2.inds.20000.snps.best  2.inds.30000.snps.best  2.inds.35000.snps.best  2.inds.40000.snps.best  2.inds.50000.snps.best  2.inds.60000.snps.best  2.inds.65000.snps.best  32.inds.10000.snps.best  32.inds.100000.snps.best  32.inds.15000.snps.best  32.inds.30000.snps.best  32.inds.35000.snps.best  32.inds.40000.snps.best  32.inds.5000.snps.best  32.inds.50000.snps.best  32.inds.70000.snps.best  32.inds.75000.snps.best  32.inds.85000.snps.best  32.inds.95000.snps.best  4.inds.10000.snps.best  4.inds.15000.snps.best  4.inds.45000.snps.best  4.inds.5000.snps.best  4.inds.50000.snps.best  4.inds.60000.snps.best  4.inds.70000.snps.best  4.inds.90000.snps.best  (+23 more)
supplementary.material/s15_interferon_comparison/: cd4.dscrnaseq.txt  cd8.dscrnaseq.txt  dc.dscrnaseq.txt  demuxlet_interferon_comparison.R  final.gene.gct.txt  t.ifn.txt  table.S1.differential.expression.analysis.singlecell.xlsx
supplementary.material/s17_interferon_variability/: IFNb.6.5.repeatability.txt  demuxlet_interferon_variability.R  unstim.0.repeatability.txt
supplementary.material/s19_facs_prop/: lupus.facs.props.rda  lupus.scRNAseq.prop.rda
supplementary.material/s1_theory/: doublet_theory.R  plot.singlets.v2.r
tutorial/: README.MD  README2.md  README_atac.md  README_vcf.md  YeLab_scRNAseq_exome_variants.bed
(+109 files in other folders)
